--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -29,7 +29,7 @@ jobs:
       run: mvn javadoc:javadoc
     - name: Copy to Documentation Website Location
       run: |
-        rm -rf docs
+        rm -rf doc/javadoc
         cp -rf target/site/apidocs/. docs
     - name: Tidy up the javadocs
       id: tidy
