--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Copy to Documentation Website Location
       run: |
         rm -rf doc/javadoc
-        cp -rf target/site/apidocs/. docs
+        cp -rf target/site/apidocs/. doc/javadoc
     - name: Tidy up the javadocs
       id: tidy
       uses: cicirello/javadoc-cleanup@v1.2.0
