--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -44,7 +44,7 @@ jobs:
         fi
         
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3.4.0
+      uses: peter-evans/create-pull-request@v3.8.1
       with:
         title: "Automated API website updates."
-        commit-message: "Automated API documentation website updates."
+        body: "Automated API documentation website updates."
