--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -31,7 +31,14 @@ jobs:
       run: |
         rm -rf doc/javadoc
         cp -rf target/site/apidocs/. doc/javadoc
-
+    - name: Tidy up the javadocs
+      id: tidy
+      uses: cicirello/javadoc-cleanup@v1.2.0
+      with:
+        path-to-root: doc/javadoc
+    - name: Log javadoc-cleanup output
+      run: |
+        echo "modified-count = ${{ steps.tidy.outputs.modified-count }}"
     - name: Commit documentation changes
       run: |
         if [ $(git status | grep -c "**/*.html") == "0" ]; then
@@ -42,7 +49,6 @@ jobs:
           git add -A
           git commit -m "Automated API website updates."
         fi
-        
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3.8.1
       with:
