--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -6,9 +6,9 @@ name: Java CI with Maven
 on:
   workflow_dispatch:
   push:
-    branches: [develop]
+    branches: [008-check-all-class]
   pull_request:
-    branches: [develop]
+    branches: [008-check-all-class]
 
 jobs:
   build:
@@ -51,4 +51,4 @@ jobs:
         fi
     - name: push test
       run: |
-        git push origin develop
+        git push origin 008-check-all-class
