--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -6,7 +6,7 @@ name: Java CI with Maven
 on:
   workflow_dispatch:
   push:
-    branches: [develop]
+    branches: [test-for-pipeline]
   pull_request:
     branches: [develop]
 
@@ -52,4 +52,4 @@ jobs:
     - name: push on develop branch
       if: github.ref == 'refs/heads/develop'
       run: |
-          git push origin develop
+          git push origin test-for-pipeline
