--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -12,9 +12,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -25,31 +23,36 @@ jobs:
       run: mvn install
     - name: Test
       run: mvn test
-    - name: Generate JavaDoc
-      run: mvn javadoc:javadoc
-    - name: Copy Document to Location
-      run: |
-        rm -rf doc/javadoc
-        cp -rf target/site/apidocs/. doc/javadoc
-    - name: Tidy up the Javadocs
-      id: tidy
-      uses: cicirello/javadoc-cleanup@v1.2.0
-      with:
-        path-to-root: doc/javadoc
-    - name: Log javadoc-cleanup output
-      run: |
-        echo "modified-count = ${{ steps.tidy.outputs.modified-count }}"
-    - name: Commit Documentation Changes
-      run: |
-        if [ $(git status | grep -c "**/*.html") == "0" ]; then
-          git checkout .
-        else
-          git config --global user.name 'amyhcy'
-          git config --global user.email 'amy.chuanyanhu@gmail.com'
-          git add -A
-          git commit -m "Javadoc updates."
-        fi
-    - name: push on develop branch
+
+  update-javadoc:
+      needs: build
+      runs-on: ubuntu-latest
       if: github.ref == 'refs/heads/develop'
-      run: |
-          git push origin develop
+      steps:
+      - name: Generate JavaDoc
+        run: mvn javadoc:javadoc
+      - name: move doc file
+        run: |
+          rm -rf doc/javadoc
+          cp -rf target/site/apidocs/. doc/javadoc
+      - name: Tidy up the Javadocs
+        id: tidy
+        uses: cicirello/javadoc-cleanup@v1.2.0
+        with:
+          path-to-root: doc/javadoc
+      - name: Log javadoc-cleanup output
+        run: |
+          echo "modified-count = ${{ steps.tidy.outputs.modified-count }}"
+      - name: Commit Documentation Changes
+        run: |
+          if [ $(git status | grep -c "**/*.html") == "0" ]; then
+            git checkout .
+          else
+            git config --global user.name 'amyhcy'
+            git config --global user.email 'amy.chuanyanhu@gmail.com'
+            git add -A
+            git commit -m "Javadoc updates."
+          fi
+      - name: push
+        run: |
+            git push origin develop
