--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -23,36 +23,36 @@ jobs:
       run: mvn install
     - name: Test
       run: mvn test
-
-  update-javadoc:
-      needs: build
-      runs-on: ubuntu-latest
+    - name: Generate JavaDoc
       if: github.ref == 'refs/heads/develop'
-      steps:
-      - name: Generate JavaDoc
-        run: mvn javadoc:javadoc
-      - name: move doc file
-        run: |
-          rm -rf doc/javadoc
-          cp -rf target/site/apidocs/. doc/javadoc
-      - name: Tidy up the Javadocs
-        id: tidy
-        uses: cicirello/javadoc-cleanup@v1.2.0
-        with:
-          path-to-root: doc/javadoc
-      - name: Log javadoc-cleanup output
-        run: |
-          echo "modified-count = ${{ steps.tidy.outputs.modified-count }}"
-      - name: Commit Documentation Changes
-        run: |
-          if [ $(git status | grep -c "**/*.html") == "0" ]; then
-            git checkout .
-          else
-            git config --global user.name 'amyhcy'
-            git config --global user.email 'amy.chuanyanhu@gmail.com'
-            git add -A
-            git commit -m "Javadoc updates."
-          fi
-      - name: push
-        run: |
-            git push origin develop
+      run: mvn javadoc:javadoc
+    - name: move doc file
+      if: github.ref == 'refs/heads/develop'
+      run: |
+        rm -rf doc/javadoc
+        cp -rf target/site/apidocs/. doc/javadoc
+    - name: Tidy up the Javadocs
+      if: github.ref == 'refs/heads/develop'
+      id: tidy
+      uses: cicirello/javadoc-cleanup@v1.2.0
+      with:
+       path-to-root: doc/javadoc
+    - name: Log javadoc-cleanup output
+      if: github.ref == 'refs/heads/develop'
+      run: |
+       echo "modified-count = ${{ steps.tidy.outputs.modified-count }}"
+    - name: Commit Documentation Changes
+      if: github.ref == 'refs/heads/develop'
+      run: |
+        if [ $(git status | grep -c "**/*.html") == "0" ]; then
+          git checkout .
+         else
+          git config --global user.name 'amyhcy'
+          git config --global user.email 'amy.chuanyanhu@gmail.com'
+          git add -A
+          git commit -m "Javadoc updates."
+        fi
+    - name: push
+      if: github.ref == 'refs/heads/develop'
+      run: |
+          git push origin develop
