add push and pull_request on main

--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -6,9 +6,13 @@ name: Java CI with Maven
 on:
   workflow_dispatch:
   push:
-    branches: [develop]
+    branches: 
+    - develop
+    - main
   pull_request:
-    branches: [develop]
+    branches: 
+    - develop
+    - main
 
 jobs:
   build:
