--- a/.github/workflows/CIBuild.yml
+++ b/.github/workflows/CIBuild.yml
@@ -19,10 +19,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build
-      run: mvn install
+    - name: Compile
+      run: mvn compile
     - name: Test
       run: mvn test
+    - name: Build
+      run: mvn install
     - name: Generate JavaDoc
       if: github.ref == 'refs/heads/develop'
       run: mvn javadoc:javadoc
