--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,4 +1,7 @@
-gameMapDirectory=./doc/map/europe/
-
+#Run Configurations
 isDemoMode=true
 isDebug=true
+
+#Gameplay Settings
+gameMapDirectory=./doc/map/europe/
+defaultReinforcementsEachRound=5
