feat: log function using observer pattern

--- a/src/warzone/resources/config.properties
+++ b/src/warzone/resources/config.properties
@@ -5,6 +5,6 @@ isLog=true
 
 #Gameplay Settings
 gameMapDirectory=./doc/map/europe/
-logDirectory=../logs/
+logDirectory=./logs/
 minimumReinforcementsEachRound=3
 minimumCountriesPerReinforcementBonus=3
