--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,8 +1,13 @@
 #Run Configurations
 isDemoMode=false
 isDebug=false
+isLog=true
 
 #Gameplay Settings
 gameMapDirectory=./resources/map/
 minimumReinforcementsEachRound=3
 minimumCountriesPerReinforcementBonus=3
+
+#Command
+simpleCommand=,loadmap,editmap,savemap,assigncountries,validatemap,showmap,help,qamode,play,next,reboot,startup,mapeditor,
+complexCommand=,editcontinent,editcountry,editneighbor,gameplayer,
