--- a/resources/config.properties
+++ b/resources/config.properties
@@ -5,6 +5,7 @@ isLog=true
 
 #Gameplay Settings
 gameMapDirectory=./resources/map/
+logDirectory=./logs/
 minimumReinforcementsEachRound=3
 minimumCountriesPerReinforcementBonus=3
 
