--- a/resources/config.properties
+++ b/resources/config.properties
@@ -10,5 +10,5 @@ minimumReinforcementsEachRound=3
 minimumCountriesPerReinforcementBonus=3
 
 #Command
-simpleCommand=,loadmap,editmap,savemap,assigncountries,validatemap,showmap,help,qamode,play,next,reboot,startup,mapeditor,
+simpleCommand=,loadmap,editmap,savemap,assigncountries,validatemap,showmap,help,qamode,play,next,reboot,startup,mapeditor,savegame,loadgame,
 complexCommand=,editcontinent,editcountry,editneighbor,gameplayer,
